--- a/app/globals.css
+++ b/app/globals.css
@@ -95,6 +95,12 @@ body {
     rgb(var(--background-start-rgb));
 }
 
+body {
+  width: 100%;
+  max-width: 1024px;
+  margin: 0 auto;
+}
+
 a {
   color: inherit;
   text-decoration: none;
