--- a/app/page.module.css
+++ b/app/page.module.css
@@ -5,6 +5,7 @@
   align-items: center;
   padding: 6rem;
   min-height: 100vh;
+  max-width: 1024px;
 }
 
 .listing {
@@ -13,4 +14,11 @@
   align-items: center;
   justify-content: center;
   gap: 1rem;
+  margin-top: 2rem;
+}
+
+.jokes_wrapper {
+  width: 100%;
+  display: flex;
+  justify-content: flex-end;
 }
