--- a/app/globals.css
+++ b/app/globals.css
@@ -93,12 +93,24 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
+  background-repeat: no-repeat;
+  min-height: 100vh;
 }
 
 body {
   width: 100%;
   max-width: 1024px;
   margin: 0 auto;
+}
+
+main {
+  width: 100%;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 100%;
+  gap: 2rem;
 }
 
 a {
