--- a/components/Buttons/Buttons.module.css
+++ b/components/Buttons/Buttons.module.css
@@ -5,3 +5,9 @@
     cursor: pointer;
     width: fit-content;
 }
+.button:hover {
+   box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2);
+}
+.button:active {
+    transform: scale(0.95);
+}
