--- a/app/page.module.css
+++ b/app/page.module.css
@@ -1,9 +1,8 @@
 .home {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
   align-items: center;
-  padding: 6rem;
+  padding: 3rem 0;
   min-height: 100vh;
   max-width: 1024px;
 }
