--- a/components/thumbnail/Thumbnail.module.css
+++ b/components/thumbnail/Thumbnail.module.css
@@ -16,3 +16,16 @@
 .container:hover {
     transform: scale(1.1);
 }
+.container:active {
+    transform: scale(0.95);
+}
+
+/* media queries for mobile  */
+@media (max-width: 600px) {
+    .container {
+        width: 90px;
+    }
+}
+.container:hover {
+    transform: scale(1.1);
+}
