--- a/app/globals.css
+++ b/app/globals.css
@@ -42,7 +42,7 @@ body {
     )
     rgb(var(--background-start-rgb));
   background-repeat: no-repeat;
-  min-height: 100vh;
+  min-height: 90vh;
 }
 
 body {
@@ -54,12 +54,14 @@ body {
 
 main {
   width: 100%;
-  min-height: 100vh;
+  min-height: 90vh;
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
   height: 100%;
   gap: 2rem;
+  padding: 0 20px;
 }
 
 a {
