--- a/components/Card/Card.module.css
+++ b/components/Card/Card.module.css
@@ -33,3 +33,20 @@
     width: 100%;
     justify-content: flex-end;
 }
+
+@media (max-width: 600px) {
+    .card {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+    .content {
+        align-items: flex-start;
+        margin-left: 0;
+        margin-top: 1rem;
+    }
+    .image {
+        width: 100%;
+        object-fit: cover;
+        aspect-ratio: 3/2;
+    }
+}
